Added Adv. Model.

--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -33,6 +33,8 @@ End-to-End Secure Chat\newline
     \item \textbf{Adversarial Models}:
     	\begin {itemize}
         	\item Eavesdropper
+		\item Outsider
+		\item Insider
         \end {itemize}
     \item \textbf {Possible Vulnerabilities}:
     	\begin {itemize}
