--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -8,7 +8,11 @@ End-to-End Secure Chat\newline
 \textbf{Application Properties}\newline
 
 \begin{itemize}
-	\item \textbf{Features}: The chat is a one-on-one system, with a middleman. The two “participants” are the clients. The middleman is the server. One client sends a message to the server; the server receives that message and passes it on the other client; the other client receives the message. The clients do not have to be active at the same time in order to receive messages.
+	\item \textbf{Features}: The chat is a one-on-one system, with a middleman. The two
+     “participants” are the clients. The middleman is the server. One client sends a message to the
+     server; the server receives that message and passes it on the other client; the other client 
+     receives the message. The clients do not have to be active at the same time in order to receive
+     messages.
 	\item \textbf{Language}: Java
     \item \textbf{Platform}: Web app
     \item \textbf{RESTful server}:
@@ -41,8 +45,13 @@ End-to-End Secure Chat\newline
         	\item 
         \end {itemize}
     \item \textbf {Related Previous Work}:
-    \item \textbf {Solution:} The clients will hold a “key” that will encrypt and decrypt messages on their end. 
-Example: Sender client sends a message to its receiver client. Sender will type up their message and “send” it. Before the message leaves the sender, the message is encrypted and then it gets sent to the server. The server will receive the encrypted message and then passes the message along to the receiver. The receiver will receive the encrypted message, decrypt it, and then the client “receives” the message (they are able to read it). 
+    \item \textbf {Solution:} The clients will hold a “key” that will encrypt and decrypt messages
+     on their end. 
+    Example: Sender client sends a message to its receiver client. Sender will type up their message
+    and “send” it. Before the message leaves the sender, the message is encrypted and then it gets
+    sent to the server. The server will receive the encrypted message and then passes the message
+    along to the receiver. The receiver will receive the encrypted message, decrypt it, and then the
+     client “receives” the message (they are able to read it). 
 	\item \textbf{Analysis}:
 \end{itemize}
 
