Add to Platform section
Included the use of other platforms, like Amazon AWS and the Spring
framework.

--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -14,7 +14,7 @@ End-to-End Secure Chat\newline
      receives the message. The clients do not have to be active at the same time in order to receive
      messages.
 	\item \textbf{Language}: Java
-    \item \textbf{Platform}: Web app
+    \item \textbf{Platform}: Web app, Amazon AWS, Spring framework for Java
     \item \textbf{RESTful server}:
     	\begin{itemize}
     		\item The server will manage each User of the chat. Each user will have its own ID and ?
