--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -14,7 +14,7 @@ End-to-End Secure Chat\newline
      receives the message. The clients do not have to be active at the same time in order to receive
      messages.
 	\item \textbf{Language}: Java
-    \item \textbf{Platform}: Web app, Amazon AWS, Spring framework for Java
+    \item \textbf{Platform}: Web app, Amazon AWS, Spring framework for Java, AES-256 encryption.
     \item \textbf{RESTful server}:
     	\begin{itemize}
     		\item The server will manage each User of the chat. Each user will have its own ID and ?
@@ -29,6 +29,7 @@ End-to-End Secure Chat\newline
         	\item Client
             \item Server
             \item User information
+			\item Message
         \end{itemize} 
     \item \textbf{Stakeholder}
     	\begin{itemize}
@@ -36,26 +37,44 @@ End-to-End Secure Chat\newline
         \end{itemize}
     \item \textbf{Adversarial Models}:
     	\begin {itemize}
-            \item Eavesdropper
-		    \item Outsider
-		    \item Insider
+  
+		    \item Outsider: Outsider can be passive or active. Active attacker tries to temper network traffic to intercept communication.
+			Passive attacker eavesdrop on the communication.
+				
+		    \item Insider: Insider have access to our communication network, and can pretend to be one of the client to the server,
+			or temper with the communication channel to their advantages.				
         \end {itemize}
     \item \textbf {Possible Vulnerabilities}:
     	\begin {itemize}
         	\item Man-in-the-middle attack
+			\item Brute force attack
+			\item Work station hijack
+			\item Encryption cryptanalysis
+			\item Keylogger
+			\item 
         \end {itemize}
     \item \textbf {Related Previous Work}:
-    \item \textbf {Solution:} The clients will hold a “key” that will encrypt and decrypt messages
+    \item \textbf {Solution:} The clients will hold a pair of keys that will encrypt and decrypt messages
      on their end. 
     Example: Sender client sends a message to its receiver client. Sender will type up their message
     and “send” it. Before the message leaves the sender, the message is encrypted and then it gets
     sent to the server. The server will receive the encrypted message and then passes the message
     along to the receiver. The receiver will receive the encrypted message, decrypt it, and then the
      client “receives” the message (they are able to read it).\newline
-    Against the man-in-the-middle attack, TSL has certificates available for use. We can use the
+    Against the man-in-the-middle attack, TLS has certificates available for use. We can use the
      certificates to authenticate the two clients. Using this authentication, we can prevent 
-     man-in-the-middle attacks.
+     man-in-the-middle attacks.\newline
+	Against brute force attack, we will use AES 256 bits encryption to encrypt the messages. To brute force an AES-256, it would
+	take far too much money and energy, and far too long to be worth while. For this reason, AES-256 would achieve computational
+	security for this project. Using AES-256 also provides solution to the cryptanalysis vulnerability, as there are no known cryptanalsys
+	against it.\newline
+	
 	\item \textbf{Analysis}:
+	\begin {itemize}
+		\item Confidentiality 
+		\item Integrity
+		\item Authentication
+	
 \end{enumerate}
 
 \end{document}
