--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -38,11 +38,13 @@ End-to-End Secure Chat\newline
     \item \textbf{Adversarial Models}:
     	\begin {itemize}
   
-		    \item Outsider: Outsider can be passive or active. Active attacker tries to temper network traffic to intercept communication.
-			Passive attacker eavesdrop on the communication.
+		    \item Outsider: Outsider can be passive or active. Active attacker tries to temper
+             network traffic to intercept communication. Passive attacker eavesdrop on the 
+             communication.
 				
-		    \item Insider: Insider have access to our communication network, and can pretend to be one of the client to the server,
-			or temper with the communication channel to their advantages.				
+		    \item Insider: Insider have access to our communication network, and can pretend to be
+             one of the client to the server, or temper with the communication channel to their 
+             advantages.				
         \end {itemize}
     \item \textbf {Possible Vulnerabilities}:
     	\begin {itemize}
@@ -54,8 +56,12 @@ End-to-End Secure Chat\newline
 			\item 
         \end {itemize}
     \item \textbf {Related Previous Work}:
-    \item \textbf {Solution:} The clients will hold a pair of keys that will encrypt and decrypt messages
-     on their end. 
+        \begin {itemize}
+            \item WhatsApp
+            \item Signal
+        \end {itemize}
+    \item \textbf {Solution:} The clients will hold a pair of keys that will encrypt and decrypt
+     messages on their end. 
     Example: Sender client sends a message to its receiver client. Sender will type up their message
     and “send” it. Before the message leaves the sender, the message is encrypted and then it gets
     sent to the server. The server will receive the encrypted message and then passes the message
@@ -64,16 +70,28 @@ End-to-End Secure Chat\newline
     Against the man-in-the-middle attack, TLS has certificates available for use. We can use the
      certificates to authenticate the two clients. Using this authentication, we can prevent 
      man-in-the-middle attacks.\newline
-	Against brute force attack, we will use AES 256 bits encryption to encrypt the messages. To brute force an AES-256, it would
-	take far too much money and energy, and far too long to be worth while. For this reason, AES-256 would achieve computational
-	security for this project. Using AES-256 also provides solution to the cryptanalysis vulnerability, as there are no known cryptanalsys
-	against it.\newline
+	Against brute force attack, we will use AES 256 bits encryption to encrypt the messages. To
+     brute force an AES-256, it would take far too much money and energy, and far too long to be
+      worth while. For this reason, AES-256 would achieve computational security for this project. 
+      Using AES-256 also provides solution to the cryptanalysis vulnerability, as there are no known
+       cryptanalsys	against it.\newline
 	
 	\item \textbf{Analysis}:
 	\begin {itemize}
-		\item Confidentiality 
-		\item Integrity
-		\item Authentication
+		\item Confidentiality\newline
+            The AES encryption will offer strong protection against an outside adversary attempting
+            to gain access to the client's messages. 
+		\item Integrity\newline
+            Against an insider man-in-the-middle adversary, certificates will be used to verify the 
+            identify of the message source. If a man-in-the-middle (MITM) adversary is detected,
+            they will be unable to receive the message and any messages sent by the MITM will not be
+            received by the clients.
+		\item Authentication\newline
+            The certificates will provide a form of authentication. Messages received by a client 
+            will have its certificate checked. If it passes, the message is confirmed to have been 
+            sent by the other client. If the certificate doesn't pass, the message is not confirmed
+            to be from the other client.
+    \end {itemize}
 	
 \end{enumerate}
 
