Added things need to be changed.

--- a/Documentation/Chat-Design.tex
+++ b/Documentation/Chat-Design.tex
@@ -9,6 +9,13 @@ End-to-End Secure Chat\newline
 
 \textbf{Application Properties}\newline
 
+\textbf{THINGS TO ADD AND CHANGE}
+Add method to ensure for message integrity.\newline
+Change to local application.\newline
+improve authentication method.\newline
+add method to exchange public key.\newline
+
+
 \begin{enumerate}
 	\item \textbf{Features}: The chat is a one-on-one system, with a middleman. The two
      “participants” are the clients. The middleman is the server. One client sends a message to the
